--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1",
-        "symfony/console": "^5.0|^6.0"
+        "php": "^8.0|^8.1|^8.2|^8.3|^8.4",
+        "symfony/console": "^5.0|^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
